fixed centering on small screens

--- a/garden/public/main.css
+++ b/garden/public/main.css
@@ -692,6 +692,18 @@ video {
   right: 45vw;
 }
 
+.right-\[43vw\] {
+  right: 43vw;
+}
+
+.right-\[20vw\] {
+  right: 20vw;
+}
+
+.right-\[35vw\] {
+  right: 35vw;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -1772,6 +1784,14 @@ video {
   opacity: 1;
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
+.opacity-10 {
+  opacity: 0.1;
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1965,6 +1985,18 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:right-\[\] {
+    right: ;
+  }
+
+  .sm\:right-\[45vw\] {
+    right: 45vw;
+  }
+
+  .sm\:right-\[40vw\] {
+    right: 40vw;
+  }
+
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
   }
